// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDetails rendering render user info 1`] = `
<span
  className="pf-v5-u-font-weight-bold pf-v5-u-font-size-sm"
>
  <Tooltip
    content="Filter audits for this user only"
  >
    <a
      className="user-info"
      href="/audits?search=user+%3D+admin"
    >
      Admin 
    </a>
  </Tooltip>
  <div
    className="gray-text"
  >
    (
    127.0.0.1
    )
  </div>
</span>
`;

exports[`UserDetails rendering render user info with audit login 1`] = `
<span
  className="pf-v5-u-font-weight-bold pf-v5-u-font-size-sm"
>
  <Tooltip
    content="Filter audits for this user only"
  >
    <a
      className="user-info"
      href="/audits?search=user+%3D+admin"
    >
      Admin 
    </a>
  </Tooltip>
  <div>
    <a
      href="/audits?search=id+%3D+123"
    >
      Logged-in
    </a>
  </div>
</span>
`;
